# routes70

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.envs/.local/: .django  .postgres
apps/routes/: admin.py  models.py
apps/routes/migrations/: 0001_initial.py  0002_auto_20201207_0553.py  0003_auto_20201207_0558.py  0004_auto_20201209_1236.py  0005_auto_20201214_0938.py  0006_auto_20201214_0943.py  0007_auto_20201217_0616.py
deploy/: Dockerfile
deploy/scripts/: entrypoint  is_postgres_ready.py  start
routes/: asgi.py  settings.py  urls.py  wsgi.py
